# SayHi

./: Cargo.toml  README.md  build.sh  build_install.sh  install.sh
root/etc/pam.d/: polkit-1
src/: main.rs
