[package]
name = "sayhi"
version = "0.1.0"
edition = "2021"
authors = ["Kevin <contato@kevin.net.br>"]
description = "Facial authentication for Alpine Linux"
license = "MIT"

[[bin]]
name = "sayhi"
path = "src/main.rs"

[dependencies]
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }
imageproc = "0.23"
rscam = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
zbus = "2.3"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
